--- a/rails/blog/app/views/articles/show.html.erb
+++ b/rails/blog/app/views/articles/show.html.erb
@@ -14,9 +14,6 @@
 <%= render @article.comments %>
 
 <h2>Add a comment:</h2>
-<%= render @article.comments %>
-
-<h2>Add a comment:</h2>
 <%= form_with model: [ @article, @article.comments.build ] do |form| %>
     <p>
         <%= form.label :commenter %><br>
@@ -29,3 +26,4 @@
     <p>
         <%= form.submit %>
     </p>
+<% end %>
