--- a/css/css_grid/lesson_11b/style.css
+++ b/css/css_grid/lesson_11b/style.css
@@ -11,9 +11,6 @@ body {
 .header {
     grid-area: header;
 }
-.hero {
-    grid-area: hero;
-}
 
 .wrapper {
     display: grid;
@@ -21,8 +18,7 @@ body {
     grid-template-columns: 120px 120px 120px;
     grid-template-areas: 
         "....... header header"
-        "sidebar content content"
-        "hero hero hero";
+        "sidebar content content";
     background-color: #fff;
     color: #444;
 }
