Fix: figured out why 11b wasn't rendering properly.

--- a/css/css_grid/lesson_11b/style.css
+++ b/css/css_grid/lesson_11b/style.css
@@ -22,7 +22,7 @@ body {
     grid-template-areas: 
         "....... header header"
         "sidebar content content"
-        "footer footer footer"
+        "footer footer footer";
     background-color: #fff;
     color: #444;
 }
