--- a/css/css_grid/lesson_13/style.css
+++ b/css/css_grid/lesson_13/style.css
@@ -1,9 +1,11 @@
 body {
     margin: 40px;
-    text-align: center;
 }
 .sidebar {
     grid-area: sidebar;
+}
+.sidebar2 {
+    grid-area: sidebar2;
 }
 .content {
     grid-area: content;
@@ -11,30 +13,55 @@ body {
 .header {
     grid-area: header;
 }
-.hero {
-    grid-area: hero;
+.footer {
+    grid-area: footer;
 }
-
 .wrapper {
-    display: grid;
-    grid-gap: 10px;
-    grid-template-columns: 120px 120px 120px;
-    grid-template-areas: 
-        "....... header header"
-        "sidebar content content"
-        "hero hero hero";
     background-color: #fff;
     color: #444;
 }
-
+.wrapper {
+    display: grid;
+    grid-gap: 1em;
+    grid-template-areas:
+        "header"
+        "sidebar"
+        "content"
+        "sidebar2"
+        "footer"
+}
+@media only screen and (min-width: 500px) {
+    .wrapper {
+        grid-template-columns: 20% auto;
+        grid-template-areas: 
+        "header header"
+        "sidebar content"
+        "siderbar2 sidebar2"
+        "footer footer";
+    }
+}
+@media only screen and (mind-width: 600px) {
+    .wrapper {
+        grid-gap: 20px;
+        grid-template-columns: 120px auto 120px;
+        grid-template-areas:
+        "header header header"
+        "sidebar content sidebar2"
+        "footer footer footer";
+    }
+}
 .box {
     background-color: #444;
     color: #fff;
     border-radius: 5px;
-    padding: 20px;
+    padding: 10px;
     font-size: 150%;
 }
 
-.header {
+.header, .footer {
     background-color: #999;
+}
+.sidebar2 {
+    background-color: #ccc;
+    color: #444;
 }
