Task: Updating Box F with color and transparency

--- a/css/css_grid/lesson_15/style.css
+++ b/css/css_grid/lesson_15/style.css
@@ -10,6 +10,10 @@ body {
     font-size: 150%;
 }
 
+.f {
+    background-color: blue;
+    opacity: 0.5;
+}
 .wrapper {
     width: 400px;
     display: grid;
