--- a/css/css_grid/lesson_16/style.css
+++ b/css/css_grid/lesson_16/style.css
@@ -19,33 +19,10 @@ body {
     font-size: 150%;
     z-index: 10;
 }
+.header {
+    background-color: #999;
+}
 
-.a {
-    grid-column: col / span 2;
-    grid-row: row;
-    
-}
-.b {
-    grid-column: col 3 / span 3;
-    grid-row: row;
-    
-}
-.c {
-    grid-column: col 1/ span 1;
-    grid-row: row 2;
-    
-}
-.d {
-    grid-column: col 2/ span 3;
-    grid-row: row 2;
-}
-.e {
-    grid-column: col / span 5;
-    grid-row: row 3;
-}
-.f {
-    grid-column: col 3/ span 3;
-    grid-row: row 2;
-    background-color: rgba(49,121,207, 0.5);
-    z-index: 10;
+.footer {
+    background-color: #999;
 }
