--- a/css/css_grid/lesson_16/style.css
+++ b/css/css_grid/lesson_16/style.css
@@ -1,12 +1,31 @@
 body {
     margin: 40px;
 }
+.sidebar {
+    grid-area: sidebar;
+}
+
+.content {
+    grid-area: content;
+    position: relative;
+}
+
+.header {
+    grid-area: header;
+}
+
+.footer {
+    grid-area: footer;
+}
 
 .wrapper {
     display: grid;
     grid-gap: 10px;
-    grid-template-columns: repeat(5, [col] 100px);
-    grid-template-rows: repeat(3, [row] auto);
+    grid-template-columns: repeat(3[col] 200px);
+    grid-template-areas:
+    "header header header"
+    "sidebar content content"
+    "footer footer footer";
     background-color: #fff;
     color: #444;
 }
@@ -15,21 +34,35 @@ body {
     background-color: #444;
     color: #fff;
     border-radius: 5px;
-    padding: 20px;
+    padding: 50px;
     font-size: 150%;
-    z-index: 10;
 }
-.header {
-    background-color: #999;
-    grid-column: col / span 5;
-}
-.sidebar {
-    grid-column: col / span 1;
-}
-.content {
-    grid-column: span 4;
-}
+
+.header, 
 .footer {
     background-color: #999;
-    grid-column: span 5;
+}
+
+.topleft {
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.topright {
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+.bottomleft {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+
+.bottomright {
+    position: absolute;
+    bottom: 0;
+    right: 0;
 }
