--- a/css/css_grid/lesson_18/style.css
+++ b/css/css_grid/lesson_18/style.css
@@ -19,5 +19,6 @@ body {
     width: 600px;
     display: grid;
     grid-gap: 10px;
-    grid-template-columns: repeat(6, 100px);
+    grid-template-rows: repeat(3, 100px);
+    grid-auto-flow: column;
 }
