--- a/css/css_grid/lesson_19/style.css
+++ b/css/css_grid/lesson_19/style.css
@@ -19,6 +19,12 @@ body {
     width: 600px;
     display: grid;
     grid-gap: 10px;
-    grid-template-rows: repeat(3, 100px);
-    grid-auto-flow: column;
+    grid-template-rows: repeat(6, 100px);
+}
+
+.box2 {
+    grid-column: 3 / 6;
+    grid-row: 2 / 3;
+    outline: 2px solid red;
+    z-index: 10;
 }
