--- a/css/css_grid/lesson_20/style.css
+++ b/css/css_grid/lesson_20/style.css
@@ -11,15 +11,28 @@ body {
 }
 
 .wrapper {
-    width: 600px;
     display: grid;
     grid-gap: 10px;
-    grid-template-rows: repeat(6, 100px);
+    grid-template-rows: repeat(auto-fill, 100px);
+    background-color: #fff;
+    color: #444;
 }
 
-.box2 {
-    grid-column: 3 / 6;
-    grid-row: 2 / 3;
-    outline: 2px solid red;
-    z-index: 10;
+.a {
+    grid-column: 1 / 3;
+}
+.b {
+    grid-column: 3 / 5;
+}
+.c {
+    grid-column: 1 / 2;
+    grid-row: 2;
+}
+.d {
+    grid-column: 2 / 5;
+    grid-row: 2;
+}
+.e {
+    grid-column: 1 / 5;
+    grid-row: 3;
 }
