--- a/css/css_grid/lesson_23/style.css
+++ b/css/css_grid/lesson_23/style.css
@@ -1,39 +1,32 @@
 body {
     margin: 40px;
 }
-
-.sidebar {
-    grid-area: sidebar;
-}
-
-.content {
-    grid-area: content;
-}
-
-.wrapper {
-    display: grid;
-    grid-gap: 10px;
-    grid-template-columns: repeat(3, [col] 120px );
-    grid-template-areas:
-    "header header header"
-    "sidebar content content";
-    color: #444;
-}
+  
 .box {
     background-color: #444;
     color: #fff;
     border-radius: 5px;
     padding: 20px;
     font-size: 150%;
+    order: 1;
 }
-
-.header {
-    background-color: #999;
+  
+.box:nth-child(even) {
+    background-color: #ccc;
+    color: #000;
 }
-
-.overlay {
-    background-color: #944;
-    z-index: 10;
-    grid-column: content-start / content-end;
-    grid-row: header-start / content-end;
+  
+.wrapper {
+    width: 600px;
+    display: grid;
+    grid-template-columns: repeat(6, 100px);
+    grid-gap: 10px;
+}
+  
+.box1 {
+    order: 3;
+}
+  
+.box2 {
+    order: 2;
 }
